--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <app-navbar></app-navbar>
+<div class="row">
+    <div style="height: 100vh;" class="col-md-3">
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="col-md-9">
+        <router-outlet></router-outlet>
+    </div>
+</div>
 
-<router-outlet></router-outlet>
+
+
