--- a/src/app/ems/sidebar/sidebar.component.html
+++ b/src/app/ems/sidebar/sidebar.component.html
@@ -2,23 +2,23 @@
     <igx-nav-drawer  id="navigation" #drawer [isOpen]="true" [pin]= "true" [pinThreshold]="0">
         <ng-template   igxDrawer>
           <nav>
-          <span igxDrawerItem igxRipple>
+          <span igxDrawerItem igxRipple routerLink="users">
               <igx-icon fontSet="material">group</igx-icon>
               <span>Users</span>
           </span>
-          <span igxDrawerItem igxRipple>
+          <span igxDrawerItem igxRipple routerLink="workers">
                 <igx-icon fontSet="material">engineering</igx-icon>
-            <span>Worker</span>
+            <span>Workers</span>
           </span>
-          <span igxDrawerItem igxRipple>
+          <span igxDrawerItem igxRipple routerLink="departments">
               <igx-icon fontSet="material">business</igx-icon>
           <span>Departments</span>
           </span>
-          <span igxDrawerItem igxRipple>
+          <span igxDrawerItem igxRipple routerLink="locations">
               <igx-icon fontSet="material">location_on</igx-icon>
           <span>Locations</span>
           </span>
-          <span igxDrawerItem igxRipple>
+          <span igxDrawerItem igxRipple routerLink="logout">
               <igx-icon fontSet="material">cancel</igx-icon>
           <span>Log Out</span>
           </span>
