Worker and user added different pages.

--- a/src/app/ems/pages/home/home.component.html
+++ b/src/app/ems/pages/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="row justify-content-center">
+    <div class="col">
+        <h2>ÇALIŞAN YÖNETİM SİSTEMİNE HOŞGELDİNİZ</h2>
+    </div>
+</div>
