That, Department's pages created on project

--- a/src/app/ems/pages/user/user/user-added/user-added.component.html
+++ b/src/app/ems/pages/user/user/user-added/user-added.component.html
@@ -45,7 +45,7 @@
                     <igx-icon>vpn_key</igx-icon>
                 </igx-suffix>
             </igx-input-group>
-            <button igxButton="raised" class="mt-3" igxRipple type="submit" routerLink="users">Gönder</button>
+            <button igxButton="raised" class="mt-3" igxRipple type="submit" routerLink="user-list">Gönder</button>
         </form>
         </div>
     </div>
