--- a/src/app/ems/pages/department/department/department-added/department-added.component.html
+++ b/src/app/ems/pages/department/department/department-added/department-added.component.html
@@ -3,8 +3,8 @@
         <div class="col-md-9">
             <form class="input-group-form" >
             <igx-input-group>
-                <input igxInput name="fullName" type="text"  required="true"/>
-                <label igxLabel for="fullName">Ad Soyad</label>
+                <input igxInput name="depName" type="text"  required="true"/>
+                <label igxLabel for="depName">Departman Adı</label>
                 <igx-suffix>
                     <igx-icon>person</igx-icon>
                 </igx-suffix>
@@ -25,10 +25,10 @@
                 </igx-suffix>
             </igx-input-group>
             <igx-input-group>
-                <label igxLabel for="dep">Departman</label>
-                <input igxInput name="dep" type="text" required="true"/>
+                <label igxLabel for="location">Lokasyon</label>
+                <input igxInput name="location" type="text" required="true"/>
                 <igx-suffix>
-                    <igx-icon>business</igx-icon>
+                    <igx-icon>location_on</igx-icon>
                 </igx-suffix>
             </igx-input-group>
             <button igxButton="raised" class="mt-3" igxRipple type="submit">Gönder</button>
